# email-watcher

./: Cargo.toml  README.md
src/: main.rs
