[package]
name = "email-watcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.0", features = ["json"]}
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
tokio = {version = "1.1.1", features = ["full"]}
